--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "colors": "^1.0.3",
     "commander": "^2.3.0",
     "dateformat": "^1.0.8",
+    "lodash.indexof": "^2.4.1",
     "shelljs": "^0.3.0"
   }
 }
