--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gbm",
-  "version": "1.2.0",
+  "version": "1.0.0",
   "description": "Git branch manage quick new a branch when package.json version daily/x.y.z",
   "bin": {
     "gbm": "cli.js"
@@ -34,9 +34,9 @@
   "dependencies": {
     "colors": "^1.0.3",
     "commander": "^2.3.0",
+    "confirm-cli": "^0.2.0",
     "dateformat": "^1.0.8",
     "semver": "^4.0.3",
-    "shelljs": "^0.3.0",
-    "yesno": "0.0.1"
+    "shelljs": "^0.3.0"
   }
 }
