--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "engineStrict": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp lint"
   },
   "repository": {
     "type": "git",
@@ -34,9 +34,13 @@
   "dependencies": {
     "colors": "^1.0.3",
     "commander": "^2.3.0",
-    "confirm-cli": "^0.2.0",
     "dateformat": "^1.0.8",
     "semver": "^4.0.3",
     "shelljs": "^0.3.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.8",
+    "gulp-jshint": "^1.8.5",
+    "jshint-stylish": "^1.0.0"
   }
 }
