--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "engineStrict": true,
   "scripts": {
-    "test": "gulp lint"
+    "test": "gulp lint",
+    "mocha": "mocha"
   },
   "repository": {
     "type": "git",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "gulp-jshint": "^1.8.5",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "mocha": "^1.21.5"
   }
 }
