--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gbm",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "CLI Tool `gbm` Git branch manage to package.json version daily/x.y.z",
   "bin": {
     "gbm": "cli.js"
@@ -38,7 +38,8 @@
     "commander": "^2.3.0",
     "dateformat": "^1.0.8",
     "semver": "^4.0.3",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "update-notifier": "^0.2.2"
   },
   "devDependencies": {
     "gulp": "^3.8.8",
