--- a/.jshintrc
+++ b/.jshintrc
@@ -18,7 +18,7 @@
   "trailing": true,
   "smarttabs": true,
   "white": true,
-  "asi": true,
+  //"asi": true,
   "globals": {
     "output": true
   }
