--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
   "dependencies": {
     "colors": "^1.0.3",
     "commander": "^2.3.0",
+    "confirm-simple": "^1.0.0",
     "dateformat": "^1.0.8",
+    "keypress": "^0.2.1",
     "semver": "^4.0.3",
     "shelljs": "^0.3.0",
     "update-notifier": "^0.2.2"
