--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gbm",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "CLI Tool `gbm` Git branch manage to package.json version daily/x.y.z",
   "bin": {
     "gbm": "cli.js"
@@ -40,7 +40,8 @@
     "dateformat": "^1.0.8",
     "semver": "^4.0.3",
     "shelljs": "^0.3.0",
-    "update-notifier": "^0.2.2"
+    "update-notifier": "^0.2.2",
+    "update-npm": "0.0.0"
   },
   "devDependencies": {
     "gulp": "^3.8.8",
