--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gbm",
-  "version": "1.1.8-bate",
+  "version": "1.1.8",
   "description": "CLI Tool `gbm` Git branch manage to package.json version daily/x.y.z",
   "main": "index.js",
   "bin": {
