--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gbm",
-  "version": "1.1.10",
+  "version": "1.1.11",
   "description": "CLI Tool `gbm` Git branch manage to package.json version daily/x.y.z",
   "main": "index.js",
   "bin": {
@@ -40,10 +40,9 @@
     "commander": "^2.8.1",
     "confirm-simple": "^1.0.3",
     "dateformat": "^1.0.11",
-    "semver": "^4.3.6",
-    "shelljs": "^0.5.1",
-    "update-notifier": "^0.5.0",
-    "update-npm": "0.0.2"
+    "semver": "^5.0.1",
+    "shelljs": "^0.5.3",
+    "update-notifier": "^0.5.0"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
